almost mvp